feat: add new feature for reservation